auth methods designed to prevent users from accessing specific routes
