# src/controller/UserController.ts
@@ -3,9 +3,45 @@ import { Request, Response } from "express";
 import { User } from "../entity/User.entity";
 import * as bcrypt from "bcrypt";
 import { Role } from "../entity/Role.entity";
+import * as jwt from 'jsonwebtoken';
 
-export const login = async (req: Request, res: Response) => {
+export const authenticate = async (req: Request, res: Response) => {
+  const UserRepository = getRepository(User);
+  const { email, password } = req.body;
+
+  try {
+    const foundUser = await UserRepository.findOne({
+      where : {
+        email
+      }
+    });
+
+    if(!foundUser) {
+      return res.status(401).json({
+        message: "User not found",
+      })
+    }
+
+    const isValidPassword = await bcrypt.compare(password, foundUser.password);
+    if(!isValidPassword){
+      return res.status(401).json({
+        message: "Incorrect password",
+      })
+    }
+
+    const token = jwt.sign({id : foundUser.id}, process.env.JWT_SECRET, {
+      expiresIn : process.env.JWT_EXPIRES_IN
+    })
+
+    delete foundUser.password;
+
+    return res.status(200).json({
+      foundUser,
+      token
+    })
+  } catch (error) {
     
+  }
 }
 
 export const registerUser = async (req: Request, res: Response) => {
@@ -24,7 +60,7 @@ export const registerUser = async (req: Request, res: Response) => {
     if (password != passwordConfirm) {
       return res.status(400).json({ message: "Password do not match" });
     } else if (!!foundUser) {
-      return res.status(400).send({
+      return res.status(409).send({
         message: "Email is already in use",
       });
     } else {
